[package]
name = "updater-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.2.2"
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
serde = { version = "1.0.189", features = ["serde_derive", "derive"] }
serde_json = "1.0.107"
device_query = "1.1.3"
axum = "0.6.20"
base64 = "0.21.4"
crc-any = "2.4.3"
